Lots of debugging to get it to work but we're here now.

--- a/public/rooms.html
+++ b/public/rooms.html
@@ -16,10 +16,10 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li class="selected">
 							<a href="rooms.html">Rooms</a>
@@ -79,10 +79,10 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travele</a>
+						<a href="/travel">Travele</a>
 					</li>
 					<li class="active">
 						<a href="rooms.html">Rooms</a>
