--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
 				<div id="navigation">
 					<ul>
 						<li class="selected">
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
 							<a href="rooms.html">Rooms</a>
@@ -99,10 +99,10 @@
 			<div>
 				<ul class="navigation">
 					<li class="active">
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travel</a>
+						<a href="/travel">Travel</a>
 					</li>
 					<li>
 						<a href="rooms.html">Rooms</a>
